style(Certificates): :lipstick: fix loading skeleton shift error with the title

--- a/src/app/website/pages/certificates/certificates.component.scss
+++ b/src/app/website/pages/certificates/certificates.component.scss
@@ -17,6 +17,12 @@
         font-weight: bold;
         padding-bottom: 15px;
       }
+
+      &.loading-title {
+        h3 {
+          color: transparent;
+        }
+      }
     }
   }
 }
